# storyboard-ai

./: .env.example  .gitignore  DANIMAK ANIMATION STUDIO.md  DEPLOYMENT_PLAN.md  DEPLOY_BEGEТ.md  DEVELOPMENT.md  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_DOCS.md  QUICK_DEPLOY.md  README.md  SUPABASE_SETUP.md  TEST_REPORT.md  config  docker-compose.yml  package-lock.json  package.json  turbo.json  ДЕПЛОЙ_НА_СЕРВЕР_ПОЛНАЯ_ИНСТРУКЦИЯ.md  ИНСТРУКЦИЯ_ДЛЯ_НОВИЧКА.md  ИНСТРУКЦИЯ_ТЕРМИНАЛ.md  ПЛАН.md  ТЕСТИРОВАНИЕ_САЙТА.md
.kilocode/: PROJECT_DOCUMENTATION.md  checklist.md  instructions.md  patterns.md  prompts.md
apps/api/: .gitignore  Dockerfile  package.json
apps/api/src/: index.ts
apps/api/src/lib/: local-auth.ts  mock-redis.ts  supabase.ts
apps/api/src/middleware/: auth.ts  error-handler.ts  request-logger.ts
apps/api/src/routes/: auth.ts  generation.ts  index.ts  projects.ts  scenes.ts  scripts.ts  subscriptions.ts
apps/api/src/utils/: errors.ts  logger.ts
apps/api/supabase/: schema.sql
apps/web/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: auth-redirect.tsx  cards.tsx  header.tsx  language-switcher.tsx  theme-switcher.tsx
apps/web/src/contexts/: language-context.tsx  theme-context.tsx
apps/workers/: .gitignore  Dockerfile  pyproject.toml
apps/workers/src/: config.py  main.py  worker.py
apps/workers/src/routers/: generation.py  health.py  prompts.py
apps/workers/src/services/: image_generator.py  prompt_engineer.py  queue_manager.py
(+17 files in other folders)
