[project]
name = "storyboard-ai-workers"
version = "0.1.0"
description = "AI Workers for Storyboard AI - Image generation and prompt processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "rq>=1.15.1",
    "python-dotenv>=1.0.0",
    "pillow>=10.2.0",
    "replicate>=0.22.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.13",
    "black>=23.12.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
